created/added couple func/components into main html file

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
             display: inline-block;
             border: 1px solid coral;
             border-radius: 4px;
-            box-shadow: 1px 1px 2px brown;
+            box-shadow: 1px 1px 2px #000;
             background: cadetblue;
-            padding: 10px;
-            margin-right: 10px;
+            padding: 60px;
+            margin: 16px;
+            margin-top: 10px;
         }
     </style>
 </head>
@@ -50,6 +51,7 @@
             <div className="car">
                 <h3>{props.name}</h3>
                 <p>Year: <strong>{props.year}</strong></p>
+                <small>created_by_Danny_ⓒ</small>
             </div>
         )
     };
